--- a/sled_users/templates/sled_users/user_admin.html
+++ b/sled_users/templates/sled_users/user_admin.html
@@ -55,7 +55,7 @@
       <div class="p">
 	<br>
 	{% if N_tasks > 0 %}
-	{% include 'sled_tasks/task_list_recipient.html' with recipient=pending_tasks admin=view.kwargs.admin %}
+	{% include 'sled_tasks/task_list_recipient.html' with recipient=pending_tasks %}
 	{% else %}
 	<p class="jb-paragraph-2">No pending confirmation tasks</p>
 	{% endif %}
