--- a/lenses/templates/lenses/lens_index.html
+++ b/lenses/templates/lenses/lens_index.html
@@ -12,7 +12,7 @@
   </a>
   <a href="{% url 'lenses:lens-all-collections' %}" class='jb-div-block-3'>
     <img src="{% static 'images/JB_Lenses_Browse.png' %}" loading="lazy" width="100" height="100" alt="">
-    <h1 class="jb-heading-2">Browse collections</h1>
+    <h1 class="jb-heading-2">Standardised (static?) Queries</h1>
   </a>
 </div>
 <div class="jb-div-block-2">
