--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -12,16 +12,21 @@
     <form id="lens-query" method="POST">
       {% csrf_token %}
 
-      {% if form.non_field_errors|length > 0 %}
+      {% if lens_form.non_field_errors|length > 0 or data_form.non_field_errors|length > 0 %}
       <div class="invalid jb-modal-field">
 	<ul>
-	  {% for error in form.non_field_errors %}
+	  {% for error in lens_form.non_field_errors %}
+	  <li>{{ error }}</li>
+	  {% endfor %}
+	  {% for error in data_form.non_field_errors %}
 	  <li>{{ error }}</li>
 	  {% endfor %}
 	</ul>
       </div>
       {% endif %}
-  
+
+
+      {% with form=lens_form %}
       <table>
         <tr>
 
@@ -115,6 +120,11 @@
         </tr>
       </table>
       {{ form.page }}
+      {% endwith %}
+
+      {% with form=imaging_form %}
+      {{ form.as_p }}
+      {% endwith %}
     </form>
     <button id="mysubmit" type="submit" class="jb-submit-button-1" form="lens-query">Submit</button>
     <button type="button" id="save-query" class="jb-submit-button-1" data-form-url="{% url 'sled_queries:query-save' %}">
@@ -162,7 +172,7 @@
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 <script type="text/javascript" src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
-{{ form.media.js }}
+{{ lens_form.media.js }}
 <script type="text/javascript">
   $(document).ready(function() {
       $("#save-query").click(function() {
