Added password reset and email. Just using a throwaway google account for now... password hardcoded :o

--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -35,9 +35,13 @@
 	  <input type="submit" value="Login" data-wait="Please wait..." class="jb-submit-button-1 w-button">
 	</div>
 	<br>
-	<div style="text-align:center">
-	  New? Register <a href="{% url 'register' %}">here</a>.
-	</div>
+  <div style="text-align:center">
+    New? Register <a href="{% url 'register' %}">here</a>.
+  </div>
+  <div style="text-align:center">
+    Forgotten password? Click <a href="{% url 'password_reset' %}">here</a>.
+  </div>
+
       </td>
     </form>
 
