--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -123,269 +123,272 @@
 	{% endwith %}
       </div>
 
+
+      ERRORS: {{ forms_with_errors }}
+      <br>
+      FIELDS: {{ forms_with_fields }}
+
       {% with fwe=forms_with_errors %}
       {% with fwf=forms_with_fields %}
-      <div id="mycarousel" class="carousel slide carousel-dark">
-	<div class="carousel-indicators">
-	  <button type="button" data-bs-target="#mycarousel" data-bs-slide-to="0" data-target="#mycarousel" data-slide-to="0" class="{% get_carousel_active fwe fwf 'default' %}"></button>
-	  <button type="button" data-bs-target="#mycarousel" data-bs-slide-to="1" data-target="#mycarousel" data-slide-to="1" class="{% get_carousel_active fwe fwf 'imaging' %}"></button>
-	  <button type="button" data-bs-target="#mycarousel" data-bs-slide-to="2" data-target="#mycarousel" data-slide-to="2" class="{% get_carousel_active fwe fwf 'spectrum' %}"></button>
-	  <button type="button" data-bs-target="#mycarousel" data-bs-slide-to="3" data-target="#mycarousel" data-slide-to="3" class="{% get_carousel_active fwe fwf 'catalogue' %}"></button>
-	  <button type="button" data-bs-target="#mycarousel" data-bs-slide-to="4" data-target="#mycarousel" data-slide-to="4" class="{% get_carousel_active fwe fwf 'lensmodel' %}"></button>
+      <ul class="nav nav-tabs" id="myTab">
+	<li class="nav-item">
+	  <button class="nav-link {% get_carousel_active fwe fwf 'default' %}" id="default-tab" data-toggle="tab" data-target="#default" type="button">
+	    Joined Queries
+	  </button>
+	</li>
+	<li class="nav-item">
+	  <button class="nav-link {% get_carousel_active fwe fwf 'imaging' %}" id="imaging-tab" data-toggle="tab" data-target="#imaging" type="button">
+	    Imaging
+	    {% if 'imaging' in fwe %}
+	    <span class="badge badge-pill badge-danger"><img src="{% static 'icons/exclamation.svg' %}"></span>
+	    {% elif 'imaging' in fwf %}
+	    <span class="badge badge-pill badge-success"><img src="{% static 'icons/check.svg' %}"></span>
+	    {% endif %}
+	  </button>
+	</li>
+	<li class="nav-item">
+	  <button class="nav-link {% get_carousel_active fwe fwf 'spectrum' %}" id="spectrum-tab" data-toggle="tab" data-target="#spectrum" type="button">
+	    Spectra
+	    {% if 'spectrum' in fwe %}
+	    <span class="badge badge-pill badge-danger"><img src="{% static 'icons/exclamation.svg' %}"></span>
+	    {% elif 'spectrum' in fwf %}
+	    <span class="badge badge-pill badge-success"><img src="{% static 'icons/check.svg' %}"></span>
+	    {% endif %}
+	  </button>
+	</li>
+	<li class="nav-item">
+	  <button class="nav-link {% get_carousel_active fwe fwf 'catalogue' %}" id="catalogue-tab" data-toggle="tab" data-target="#catalogue" type="button">
+	    Catalogues
+	    {% if 'catalogue' in fwe %}
+	    <span class="badge badge-pill badge-danger"><img src="{% static 'icons/exclamation.svg' %}"></span>
+	    {% elif 'catalogue' in fwf %}
+	    <span class="badge badge-pill badge-success"><img src="{% static 'icons/check.svg' %}"></span>
+	    {% endif %}
+	  </button>
+	</li>
+	<li class="nav-item">
+	  <button class="nav-link {% get_carousel_active fwe fwf 'lensmodel' %}" id="lensmodel-tab" data-toggle="tab" data-target="#lensmodel" type="button">
+	    Models
+	  </button>
+	</li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+	<div class="tab-pane fade show {% get_carousel_active fwe fwf 'default' %}" id="default">
+	  Instructions for joined queries
 	</div>
-	<div class="carousel-inner">
-
-	  <div class="carousel-item {% get_carousel_active fwe fwf 'default' %}">
-	    <div>
-	      <h1 class="jb-heading-2">Joined queries</h1>
-	      <p>
-		Instructions on how joined queries work
-	      </p>
-	    </div>
+	<div class="data-form tab-pane fade {% get_carousel_active fwe fwf 'imaging' %}" id="imaging">
+	  {% with form=imaging_form %}
+	      
+	  {% if form.non_field_errors|length > 0 %}
+	  <div class="invalid jb-modal-field">
+	    <ul>
+	      {% for error in form.non_field_errors %}
+	      <li>{{ error }}</li>
+	      {% endfor %}
+	    </ul>
 	  </div>
+	  {% endif %}
 	  
-	  <div class="carousel-item {% get_carousel_active fwe fwf 'imaging' %}">
-	    {% with form=imaging_form %}
-	    <div class="data-form">
-	      <h1 class="jb-heading-2">Imaging data</h1>
-	      
-	      {% if form.non_field_errors|length > 0 %}
-	      <div class="invalid jb-modal-field">
-		<ul>
-		  {% for error in form.non_field_errors %}
-		  <li>{{ error }}</li>
-		  {% endfor %}
-		</ul>
-	      </div>
-	      {% endif %}
-	      
-	      <table>
-		<tr>
-		  <td>&nbsp;</td>
-		  <td>{{ form.instrument }}</td>
-		  <td style="vertical-align:top">
-		    <div class="surro">OR</div>
-		    <div class="surro">
-		      <label class="switch">
-			{{ form.instrument_and }}
-			<span class="slider round"></span>
-		      </label>
-		    </div>
-		    <div class="surro">AND</div>
-		  </td>
-		  <td>&nbsp;</td>
-		  <td>&nbsp;</td>
-		</tr>
-		<tr>
-		  <td>&nbsp;</td>
-		  <td>Band</td>
-		  <td>{{ form.band }}</td>
-		  <td>&nbsp;</td>
-		  <td>&nbsp;</td>
-		</tr>
-		<tr>
-		  <td>&nbsp;</td>
-		  <td>Future</td>
-		  <td>{{ form.future }} </td>
-		  <td>&nbsp;</td>
-		  <td>&nbsp;</td>
-		</tr>
-		<tr>
-		  <td>{{ form.date_taken_min.errors }}</td>
-		  <td>{{ form.date_taken_min }}</td>
-		  <td>&lt; Date taken &lt;</td>
-		  <td>{{ form.date_taken_max }}</td>
-		  <td>{{ form.date_taken_max.errors }}</td>
-		</tr>
-		<tr>
-		  <td>{{ form.exposure_time_min.errors }}</td>
-		  <td>{{ form.exposure_time_min }}</td>
-		  <td>&lt; Exposure time [s] &lt;</td>
-		  <td>{{ form.exposure_time_max }}</td>
-		  <td>{{ form.exposure_time_max.errors }}</td>
-		</tr>
-		<tr>
-		  <td>{{ form.pixel_size_min.errors }}</td>
-		  <td>{{ form.pixel_size_min }}</td>
-		  <td>&lt; Pixel size [arcsec] &lt;</td>
-		  <td>{{ form.pixel_size_max }}</td>
-		  <td>{{ form.pixel_size_max.errors }}</td>
-		</tr>
-	      </table>
-	      {% endwith %}
-	    </div>
-	  </div>
-	  
-	  <div class="carousel-item {% get_carousel_active fwe fwf 'spectrum' %}">
-	    <div class="data-form">
-	      {% with form=spectrum_form %}
-	      <h1 class="jb-heading-2">Spectra</h1>
-	      
-	      {% if form.non_field_errors|length > 0 %}
-	      <div class="invalid jb-modal-field">
-		<ul>
-		  {% for error in form.non_field_errors %}
-		  <li>{{ error }}</li>
-		  {% endfor %}
-		</ul>
-	      </div>
-	      {% endif %}
-	      
-	      <table>
-		<tr>
-		  <td>&nbsp;</td>
-		  <td>{{ form.instrument }}</td>
-		  <td style="vertical-align:top">
-		    <div class="surro">OR</div>
-		    <div class="surro">
-		      <label class="switch">
-			{{ form.instrument_and }}
-			<span class="slider round"></span>
-		      </label>
-		    </div>
-		    <div class="surro">AND</div>
-		  </td>
-		  <td>&nbsp;</td>
-		  <td>&nbsp;</td>
-		</tr>
-		<tr>
-		  <td>&nbsp;</td>
-		  <td>Future</td>
-		  <td>{{ form.future }} </td>
-		  <td>&nbsp;</td>
-		  <td>&nbsp;</td>
-		</tr>
-		<tr>
-		  <td>{{ form.date_taken_min.errors }}</td>
-		  <td>{{ form.date_taken_min }}</td>
-		  <td>&lt; Date taken &lt;</td>
-		  <td>{{ form.date_taken_max }}</td>
-		  <td>{{ form.date_taken_max.errors }}</td>		  
-		</tr>
-		<tr>
-		  <td>{{ form.exposure_time_min.errors }}</td>
-		  <td>{{ form.exposure_time_min }}</td>
-		  <td>&lt; Exposure time [s] &lt;</td>
-		  <td>{{ form.exposure_time_max }}</td>
-		  <td>{{ form.exposure_time_max.errors }}</td>
-		</tr>
-		<tr>
-		  <td>{{ form.wavelength_min.errors }}</td>
-		  <td>{{ form.wavelength_min }}</td>
-		  <td>&lt; Wavelength [nm] &lt;</td>
-		  <td>{{ form.wavelength_max }}</td>
-		  <td>{{ form.wavelength_max.errors }}</td>
-		</tr>
-		<tr>
-		  <td>{{ form.resolution_min.errors }}</td>
-		  <td>{{ form.resolution_min }}</td>
-		  <td>&lt; Resolution [nm] &lt;</td>
-		  <td>{{ form.resolution_max }}</td>
-		  <td>{{ form.resolution_max.errors }}</td>
-		</tr>
-	      </table>
-	      {% endwith %}
-	    </div>
-	  </div>
-
-
-	  <div class="carousel-item {% get_carousel_active fwe fwf 'catalogue' %}">
-	    <div class="data-form">
-	      {% with form=catalogue_form %}
-	      <h1 class="jb-heading-2">Catalogues</h1>
-	      
-	      {% if form.non_field_errors|length > 0 %}
-	      <div class="invalid jb-modal-field">
-		<ul>
-		  {% for error in form.non_field_errors %}
-		  <li>{{ error }}</li>
-		  {% endfor %}
-		</ul>
-	      </div>
-	      {% endif %}
-	      
-	      <table>
-		<tr>
-		  <td>&nbsp;</td>
-		  <td>{{ form.instrument }}</td>
-		  <td style="vertical-align:top">
-		    <div class="surro">OR</div>
-		    <div class="surro">
-		      <label class="switch">
-			{{ form.instrument_and }}
-			<span class="slider round"></span>
-		      </label>
-		    </div>
-		    <div class="surro">AND</div>
-		  </td>
-		  <td>&nbsp;</td>
-		  <td>&nbsp;</td>
-		</tr>
-		<tr>
-		  <td>&nbsp;</td>
-		  <td>Band</td>
-		  <td>{{ form.band }}</td>
-		  <td>&nbsp;</td>
-		  <td>&nbsp;</td>
-		</tr>
-		<tr>
-		  <td>&nbsp;</td>
-		  <td>Future</td>
-		  <td>{{ form.future }} </td>
-		  <td>&nbsp;</td>
-		  <td>&nbsp;</td>
-		</tr>
-		<tr>
-		  <td>{{ form.date_taken_min.errors }}</td>
-		  <td>{{ form.date_taken_min }}</td>
-		  <td>&lt; Date taken &lt;</td>
-		  <td>{{ form.date_taken_max }}</td>
-		  <td>{{ form.date_taken_max.errors }}</td>
-		</tr>
-		<tr>
-		  <td>{{ form.distance_min.errors }}</td>
-		  <td>{{ form.distance_min }}</td>
-		  <td>&lt; Distance [arcsec] &lt;</td>
-		  <td>{{ form.distance_max }}</td>
-		  <td>{{ form.distance_max.errors }}</td>
-		</tr>
-		<tr>
-		  <td>{{ form.mag_min.errors }}</td>
-		  <td>{{ form.mag_min }}</td>
-		  <td>&lt; Magnitude &lt;</td>
-		  <td>{{ form.mag_max }}</td>
-		  <td>{{ form.mag_max.errors }}</td>
-		</tr>
-	      </table>
-	      {% endwith %}
-	    </div>
-	  </div>
-
-	  
-	  <div class="carousel-item {% get_carousel_active fwe fwf 'lensmodel' %}">
-	    <div>
-	      <h1 class="jb-heading-2">Models</h1>
-	      <p>
-		Coming soon
-	      </p>
-	    </div>
-	  </div>
-	  
+	  <table>
+	    <tr>
+	      <td>&nbsp;</td>
+	      <td>{{ form.instrument }}</td>
+	      <td style="vertical-align:top">
+		<div class="surro">OR</div>
+		<div class="surro">
+		  <label class="switch">
+		    {{ form.instrument_and }}
+		    <span class="slider round"></span>
+		  </label>
+		</div>
+		<div class="surro">AND</div>
+	      </td>
+	      <td>&nbsp;</td>
+	      <td>&nbsp;</td>
+	    </tr>
+	    <tr>
+	      <td>&nbsp;</td>
+	      <td>Band</td>
+	      <td>{{ form.band }}</td>
+	      <td>&nbsp;</td>
+	      <td>&nbsp;</td>
+	    </tr>
+	    <tr>
+	      <td>&nbsp;</td>
+	      <td>Future</td>
+	      <td>{{ form.future }} </td>
+	      <td>&nbsp;</td>
+	      <td>&nbsp;</td>
+	    </tr>
+	    <tr>
+	      <td>{{ form.date_taken_min.errors }}</td>
+	      <td>{{ form.date_taken_min }}</td>
+	      <td>&lt; Date taken &lt;</td>
+	      <td>{{ form.date_taken_max }}</td>
+	      <td>{{ form.date_taken_max.errors }}</td>
+	    </tr>
+	    <tr>
+	      <td>{{ form.exposure_time_min.errors }}</td>
+	      <td>{{ form.exposure_time_min }}</td>
+	      <td>&lt; Exposure time [s] &lt;</td>
+	      <td>{{ form.exposure_time_max }}</td>
+	      <td>{{ form.exposure_time_max.errors }}</td>
+	    </tr>
+	    <tr>
+	      <td>{{ form.pixel_size_min.errors }}</td>
+	      <td>{{ form.pixel_size_min }}</td>
+	      <td>&lt; Pixel size [arcsec] &lt;</td>
+	      <td>{{ form.pixel_size_max }}</td>
+	      <td>{{ form.pixel_size_max.errors }}</td>
+	    </tr>
+	  </table>
+	  {% endwith %}
 	</div>
-	
-	<button class="carousel-control-prev" type="button" data-bs-target="#mycarousel" data-bs-slide="prev" data-target="#mycarousel" data-slide="prev">
-	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	  <span class="visually-hidden">Previous</span>
-	</button>
-	<button class="carousel-control-next" type="button" data-bs-target="#mycarousel" data-bs-slide="next" data-target="#mycarousel" data-slide="next">
-	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	  <span class="visually-hidden">Next</span>
-	</button>
+	<div class="data-form tab-pane fade {% get_carousel_active fwe fwf 'spectrum' %}" id="spectrum">
+	  {% with form=spectrum_form %}
+	  
+	  {% if form.non_field_errors|length > 0 %}
+	  <div class="invalid jb-modal-field">
+	    <ul>
+	      {% for error in form.non_field_errors %}
+	      <li>{{ error }}</li>
+	      {% endfor %}
+	    </ul>
+	  </div>
+	  {% endif %}
+	  
+	  <table>
+	    <tr>
+	      <td>&nbsp;</td>
+	      <td>{{ form.instrument }}</td>
+	      <td style="vertical-align:top">
+		<div class="surro">OR</div>
+		<div class="surro">
+		  <label class="switch">
+		    {{ form.instrument_and }}
+		    <span class="slider round"></span>
+		  </label>
+		</div>
+		<div class="surro">AND</div>
+	      </td>
+	      <td>&nbsp;</td>
+	      <td>&nbsp;</td>
+	    </tr>
+	    <tr>
+	      <td>&nbsp;</td>
+	      <td>Future</td>
+	      <td>{{ form.future }} </td>
+	      <td>&nbsp;</td>
+	      <td>&nbsp;</td>
+	    </tr>
+	    <tr>
+	      <td>{{ form.date_taken_min.errors }}</td>
+	      <td>{{ form.date_taken_min }}</td>
+	      <td>&lt; Date taken &lt;</td>
+	      <td>{{ form.date_taken_max }}</td>
+	      <td>{{ form.date_taken_max.errors }}</td>		  
+	    </tr>
+	    <tr>
+	      <td>{{ form.exposure_time_min.errors }}</td>
+	      <td>{{ form.exposure_time_min }}</td>
+	      <td>&lt; Exposure time [s] &lt;</td>
+	      <td>{{ form.exposure_time_max }}</td>
+	      <td>{{ form.exposure_time_max.errors }}</td>
+	    </tr>
+	    <tr>
+	      <td>{{ form.wavelength_min.errors }}</td>
+	      <td>{{ form.wavelength_min }}</td>
+	      <td>&lt; Wavelength [nm] &lt;</td>
+	      <td>{{ form.wavelength_max }}</td>
+	      <td>{{ form.wavelength_max.errors }}</td>
+	    </tr>
+	    <tr>
+	      <td>{{ form.resolution_min.errors }}</td>
+	      <td>{{ form.resolution_min }}</td>
+	      <td>&lt; Resolution [nm] &lt;</td>
+	      <td>{{ form.resolution_max }}</td>
+	      <td>{{ form.resolution_max.errors }}</td>
+	    </tr>
+	  </table>
+	  {% endwith %}
+	</div>
+	<div class="data-form tab-pane fade {% get_carousel_active fwe fwf 'catalogue' %}" id="catalogue">
+	  {% with form=catalogue_form %}
+	  
+	  {% if form.non_field_errors|length > 0 %}
+	  <div class="invalid jb-modal-field">
+	    <ul>
+	      {% for error in form.non_field_errors %}
+	      <li>{{ error }}</li>
+	      {% endfor %}
+	    </ul>
+	  </div>
+	  {% endif %}
+	  
+	  <table>
+	    <tr>
+	      <td>&nbsp;</td>
+	      <td>{{ form.instrument }}</td>
+	      <td style="vertical-align:top">
+		<div class="surro">OR</div>
+		<div class="surro">
+		  <label class="switch">
+		    {{ form.instrument_and }}
+		    <span class="slider round"></span>
+		  </label>
+		</div>
+		<div class="surro">AND</div>
+	      </td>
+	      <td>&nbsp;</td>
+	      <td>&nbsp;</td>
+	    </tr>
+	    <tr>
+	      <td>&nbsp;</td>
+	      <td>Band</td>
+	      <td>{{ form.band }}</td>
+	      <td>&nbsp;</td>
+	      <td>&nbsp;</td>
+	    </tr>
+	    <tr>
+	      <td>&nbsp;</td>
+	      <td>Future</td>
+	      <td>{{ form.future }} </td>
+	      <td>&nbsp;</td>
+	      <td>&nbsp;</td>
+	    </tr>
+	    <tr>
+	      <td>{{ form.date_taken_min.errors }}</td>
+	      <td>{{ form.date_taken_min }}</td>
+	      <td>&lt; Date taken &lt;</td>
+	      <td>{{ form.date_taken_max }}</td>
+	      <td>{{ form.date_taken_max.errors }}</td>
+	    </tr>
+	    <tr>
+	      <td>{{ form.distance_min.errors }}</td>
+	      <td>{{ form.distance_min }}</td>
+	      <td>&lt; Distance [arcsec] &lt;</td>
+	      <td>{{ form.distance_max }}</td>
+	      <td>{{ form.distance_max.errors }}</td>
+	    </tr>
+	    <tr>
+	      <td>{{ form.mag_min.errors }}</td>
+	      <td>{{ form.mag_min }}</td>
+	      <td>&lt; Magnitude &lt;</td>
+	      <td>{{ form.mag_max }}</td>
+	      <td>{{ form.mag_max.errors }}</td>
+	    </tr>
+	  </table>
+	  {% endwith %}
+	</div>
+	<div class="tab-pane fade {% get_carousel_active fwe fwf 'lensmodel' %}" id="lensmodel">
+	  Coming soon
+	</div>
       </div>
       {% endwith %}
       {% endwith %}
 
 
+      
 
     </form>
     <button id="mysubmit" type="submit" class="jb-submit-button-1" form="lens-query">Submit</button>
@@ -428,7 +431,6 @@
 {% block extrastyles %}
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <link href="{% static 'lenses/css/lens_query.css' %}" rel="stylesheet" />
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 {% endblock extrastyles %}
 
 
@@ -439,11 +441,6 @@
 {{ lens_form.media.js }}
 <script type="text/javascript">
   $(document).ready(function() {
-      $('.carousel').carousel({
-	  interval: false,
-	  keyboard: false,
-	  ride: false
-      })
 
       $("#save-query").click(function() {
 	  // Check that the query form is not empty
